add rigth many to one, tests are right

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "jest --debug",
     "test:e2estop": "jest --config ./test/jest-e2e.json --coverage --runInBand --detectOpenHandles --forceExit",
-    "test:e2e": "jest --runInBand --coverage --detectOpenHandles --forceExit"
+    "test:e2e": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
