--- a/package.json
+++ b/package.json
@@ -36,16 +36,19 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cron": "^2.0.1",
     "@vercel/postgres": "^0.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "cron": "^2.4.0",
     "date-fns": "^2.30.0",
     "faker": "^6.6.6",
     "handlebars": "^4.7.7",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.1.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
