--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.391.0",
     "@faker-js/faker": "^7.6.0",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
