--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "sharp": "^0.32.5",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
@@ -67,7 +68,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
-    "@types/node": "18.15.11",
+    "@types/node": "^20.5.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
