--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/cron": "^2.0.1",
     "@types/multer": "^1.4.7",
     "@vercel/postgres": "^0.4.0",
+    "axios": "1.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -51,6 +52,7 @@
     "handlebars": "^4.7.7",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.1.0",
+    "ngrok": "^5.0.0-beta.2",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
